# exploration_go2

./: .gitignore  Dockerfile  README.md  attach.sh  run.sh
ros2_ws/: map.rviz  tfl1.py
ros2_ws/src/explorer_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/explorer_pkg/config/: explorator_params.yaml  map_projector_params.yaml
ros2_ws/src/explorer_pkg/explorer_pkg/: dbscan.py  frontier_scanner.py  goal_manager.py
ros2_ws/src/explorer_pkg/launch/: explorer.launch.py
ros2_ws/src/explorer_pkg/src/: map_projector.cpp  map_projector_bayesian.cpp
share/: 2readme.txt  bringup_launch.py  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_robot.yaml  params_mid360.yaml  planning.rviz  readme.txt  update_conf.sh
share/maze_creator/: maze.txt  maze_creator.py  model.sdf
